[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Yufei Chen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.15"
failure = "0.1.8" 
serde = { version ="1.0.140", features = ["derive"] } 
serde_json = "1.0"
structopt = "0.3.26"
log = "0.4.17"
env_logger = "0.9.0"
sled = "0.34.7"
crossbeam = "0.8.2"
num_cpus = "1.13.1"
rayon = "1.5.3"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"

[[bench]]
name = "engine_bench"
harness = false